<resources>
    <string name="app_name">My Domitory</string>
    <string name="login">Login your Account</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="signup_button">Sign up</string>
    <string name="signin_button">Sign in</string>
    <string name="signup_text">Create your Account</string>
    <string name="signup_name">Name</string>
    <string name="signup_grade">Grade</string>
    <string name="hintSchool">School</string>
</resources>