<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/app_name_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:textColor="@color/login"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/signup_border"
            android:hint="@string/signup_name"
            android:padding="17dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/grade_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/signup_border"
            android:hint="@string/signup_grade"
            android:padding="17dp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/shcool_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/boder"
        android:hint="@string/hintSchool"
        android:padding="17dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/boder"
        android:hint="@string/hintEmail"
        android:padding="17dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/pass_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        android:textColor="@color/hintPassword"
        android:layout_marginTop="25dp"
        android:background="@drawable/boder"
        android:textStyle="bold"
        android:padding="17dp"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:padding="17dp"
        android:layout_marginTop="25dp"
        android:text="@string/signup_button"
        android:textColor="@color/signup_button"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="- on sign up with -"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/hintPassword"
        android:gravity="center"
        android:layout_marginTop="25dp"/>


</LinearLayout>