<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/app_name_color"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textColor="@color/login"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEmail"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        android:background="@drawable/boder"
        android:padding="17dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        android:textColor="@color/hintPassword"
        android:layout_marginTop="36dp"
        android:background="@drawable/boder"
        android:textStyle="bold"
        android:padding="17dp"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:padding="17dp"
        android:layout_marginTop="36dp"
        android:text="@string/signin_button"
        android:textColor="@color/signin_button"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="- on sign in with -"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/hintPassword"
        android:gravity="center"
        android:layout_marginTop="30dp"/>


</LinearLayout>